--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <h1 class="title">Socials</h1>
         <p class="title">
-            <a href="https://t.me/">Telegram</a>
+            <a href="https://t.me/bankofmemes_sol">Telegram</a>
         </p>
 
         <h1 class="title">Token Information</h1>
