Update og:title / remove og:image

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta property="og:title" content="Bonk of America | Bonking &amp; Financial Services">
-    <meta property="og:description" content="Bonk of America | Bonking &amp; Financial Services on Solana">
-    <meta property="og:image" content="images/logo.png">
+    <meta property="og:title" content="BANK OF MEMES &amp; Greatest Memes Of All Time">
+    <meta property="og:description" content="BANK OF MEMES &amp; Greatest Memes Of All Time">
+    
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bonk of America | Bonking &amp; Financial Services on Solana">
