--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bonk of America | Bonking &amp; Financial Services on Solana">
+    <meta name="description" content="BANK OF MEMES &amp; Greatest Memes Of All Time">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="/images/fav/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
