--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <h1 class="title">Token Information</h1>
         <p class="title">
-            CA: 
+            CA: BoMEosdPYc6wSAJ9kdHrfd8LaVDP8p4e5X2vduY1zhMJ
         </p>
 
 
