--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <p class="title">
             <a href="https://t.me/bankofmemes_sol">Telegram</a>
         </p>
-
+        <p class="title">
+            <a href="https://x.com/bankofmemes_sol">Twitter</a>
+        </p>
         <h1 class="title">Token Information</h1>
         <p class="title">
             CA: BoMEosdPYc6wSAJ9kdHrfd8LaVDP8p4e5X2vduY1zhMJ
